--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
@@ -17,3 +18,4 @@
     "node": ">=14.6.0"
   }
 }
+
